Changed data structure & added enter handling on adding entities & Minor spacing changes in UI (fix commit)

--- a/client/src/pages/Categories/Categories.css
+++ b/client/src/pages/Categories/Categories.css
@@ -3,7 +3,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     padding: 2em;
-    justify-content: space-around;
+    justify-content: center;
     z-index: 11;
 }
 
